# RigidRegistration

./: CMakeLists.txt  LICENSE  README.md  RigidRegistration.cpp  RigidRegistration.h
OpenCVSetup/: installOCV-3.4.0.sh
